{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 95,
  "lineage": "4efc823b-a1d9-3066-6497-43a54a8f352a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d60869a4-5d4a-4ff5-88a1-01c2f0e2f51d/resourceGroups/rg-igorminsait/providers/Microsoft.Network/networkInterfaces/nic-vm-lnx1",
            "internal_domain_name_suffix": "rc1pm3ocnlaefaysxc20rkqjub.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d60869a4-5d4a-4ff5-88a1-01c2f0e2f51d/resourceGroups/rg-igorminsait/providers/Microsoft.Network/publicIPAddresses/pip-vmwin01",
                "subnet_id": "/subscriptions/d60869a4-5d4a-4ff5-88a1-01c2f0e2f51d/resourceGroups/rg-igorminsait/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "mac_address": "60-45-BD-BC-02-D2",
            "name": "nic-vm-lnx1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-igorminsait",
            "virtual_machine_id": "/subscriptions/d60869a4-5d4a-4ff5-88a1-01c2f0e2f51d/resourceGroups/rg-igorminsait/providers/Microsoft.Compute/virtualMachines/vm-lnx1"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgTeste",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d60869a4-5d4a-4ff5-88a1-01c2f0e2f51d/resourceGroups/rg-igorminsait/providers/Microsoft.Network/networkSecurityGroups/nsg-teste1",
            "location": "eastus2",
            "name": "nsg-teste1",
            "resource_group_name": "rg-igorminsait",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/d60869a4-5d4a-4ff5-88a1-01c2f0e2f51d/resourceGroups/rg-igorminsait/providers/Microsoft.Network/networkSecurityGroups/nsg-teste1/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "nsg-teste1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-igorminsait",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsgTeste",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d60869a4-5d4a-4ff5-88a1-01c2f0e2f51d/resourceGroups/rg-igorminsait/providers/Microsoft.Network/publicIPAddresses/pip-vmwin01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.15.117.201",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "pip-vmwin01",
            "resource_group_name": "rg-igorminsait",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d60869a4-5d4a-4ff5-88a1-01c2f0e2f51d/resourceGroups/rg-igorminsait/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet",
            "name": "subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-igorminsait",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d60869a4-5d4a-4ff5-88a1-01c2f0e2f51d/resourceGroups/rg-igorminsait/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet",
            "network_security_group_id": "/subscriptions/d60869a4-5d4a-4ff5-88a1-01c2f0e2f51d/resourceGroups/rg-igorminsait/providers/Microsoft.Network/networkSecurityGroups/nsg-teste1",
            "subnet_id": "/subscriptions/d60869a4-5d4a-4ff5-88a1-01c2f0e2f51d/resourceGroups/rg-igorminsait/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.nsgTeste",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "75f6b688-6ac2-42c0-8312-b8b9a8aa09a1",
            "id": "/subscriptions/d60869a4-5d4a-4ff5-88a1-01c2f0e2f51d/resourceGroups/rg-igorminsait/providers/Microsoft.Network/virtualNetworks/vnet",
            "location": "eastus2",
            "name": "vnet",
            "resource_group_name": "rg-igorminsait",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/d60869a4-5d4a-4ff5-88a1-01c2f0e2f51d/resourceGroups/rg-igorminsait/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet",
                "name": "subnet",
                "security_group": "/subscriptions/d60869a4-5d4a-4ff5-88a1-01c2f0e2f51d/resourceGroups/rg-igorminsait/providers/Microsoft.Network/networkSecurityGroups/nsg-teste1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}